--- a/views/error.html
+++ b/views/error.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    {{>header}}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
-    <link rel="stylesheet" href="error.css">
+    <title>Notfilm - Error</title>
+    <link rel="stylesheet" href="/css/style_footer.css">
+    <link rel="stylesheet" href="/css/style_header.css">
+    <link rel="stylesheet" href="/css/style_confirmation.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/logo/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="error-container">
-        <h1>¡Error!</h1>
-        <p>Ha ocurrido un error.</p>
-        <p>{{message}}</p>
-        <p><a href="/">Volver al inicio</a></p>
+    {{>header}}
+    <div class="row">
+        <div class="container my-5 text-center error-container">
+            <h1>¡Error!</h1>
+            <p>Ha ocurrido un error.</p>
+            <p>{{message}}</p>
+
+            {{#boolean_episode1}}
+            <a href="/main_detalle/{{serie._id}}/1" class="btn mt-3">Volver al episodio</a>
+            {{/boolean_episode1}}
+
+            {{#boolean_episode2}}
+            <a href="/update_episode/{{serie._id}}/{{episode.numEpisode}}" class="btn mt-3">Volver al formulario</a>
+            {{/boolean_episode2}}
+
+            {{#boolean_serie1}}
+            <a href="/serie_update/{{serie._id}}" class="btn mt-3">Volver al formulario</a>
+            {{/boolean_serie1}}
+
+            {{#boolean_serie2}}
+            <a href="/new_elem" class="btn mt-3">Volver al formulario</a>
+            {{/boolean_serie2}}
+        </div>
     </div>
+
     {{>footer}}
 </body>
 </html>
