--- a/views/saved_serie.html
+++ b/views/saved_serie.html
@@ -1,5 +1,40 @@
-<div class="container my-5 text-center">
-    <h1>¡Serie Guardada!</h1>
-    <p>Tu nueva serie ha sido añadida al catálogo.</p>
-    <a href="/" class="btn btn-primary mt-3">Volver al Catálogo</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style_confirmation.css">
+    <link rel="stylesheet" href="/css/style_footer.css">
+    <link rel="stylesheet" href="/css/style_header.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="shortcut icon" href="/images/logo/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Notfilm</title>
+</head>
+<body>
+    {{>header}}
+<div class="row">
+    <div class="container my-5 text-center">
+        <h1>Se ha realizado la operacion correctamente</h1>
+        <p>{{message}}</p>
+        {{#boolean_serie1}}
+        <a href="/" class="btn btn-primary mt-3">Volver al Catálogo</a>
+        {{/boolean_serie1}}
+
+        {{#boolean_episode1}}
+        <a href="/main_detalle/{{serie._id}}/{{episode.numEpisode}}" class="btn btn-primary mt-3">Volver al episodio</a>
+        {{/boolean_episode1}}
+
+        {{#boolean_episode0}}
+        <a href="/main_detalle/{{serie._id}}/{{episode.numEpisode}}" class="btn btn-primary mt-3">Volver al la pagina de detalle</a>
+        {{/boolean_episode0}}
+
+        {{#boolean_episode2}}
+        <a href="/main_detalle/{{serie._id}}/{{episode.numEpisode}}" class="btn btn-primary mt-3">Volver al episodio</a>
+        {{/boolean_episode2}}
+    </div>
 </div>
+    {{>footer}} 
+</body>
+</html>
