--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,21 +12,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Notfilm</title>
 </head>
+
 <body>
-    
+
     {{>header}}
 
     <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container d-flex justify-content-center">
-            <form class="d-flex w-100 justify-content-center" role="search" id="barra_busqueda">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <form class="d-flex w-100 justify-content-center" role="search"  id="barra_busqueda" method="get" action="/">
+                <input class="form-control me-2" type="search" placeholder="Search" name="title"aria-label="Search" value="{{searchTitle}}"/>
                 <button class="btn btn-outline-danger" type="submit">Search</button>
                 <a class="btn btn-primary ms-2" href="new_elem" role="button">+</a>
             </form>
         </div>
     </nav>
+
+    <div class="d-flex justify-content-center flex-wrap gap-2 genre-buttons">
+        {{#genres}}
+        <a href="/?genre={{.}}" class="btn btn-outline-danger">{{.}}</a>
+        {{/genres}}
+        <a href="/" class="btn btn-outline-danger">Todos</a>
+    </div>
+
+
     <main>
-        <div  class="container">
+        <div class="container">
             <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4">
                 {{#series}}
                 <div class="col">
@@ -34,7 +45,8 @@
                             <img src="/serie/{{_id}}/image" class="card-img-top fixed-img" alt="...">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">{{title}} <span  class="badge rounded-pill {{badgeClass}}">+{{ageClassification}}</span></h5>
+                            <h5 class="card-title">{{title}} <span
+                                    class="badge rounded-pill {{badgeClass}}">+{{ageClassification}}</span></h5>
                             <ul>
                                 <li>Genero: {{genre}}</li>
                                 <li>Estreno: {{premiere}}</li>
@@ -48,12 +60,41 @@
             </div>
         </div>
         {{^series}}
-            <p>Series no disponibles</p>
+        <p>Series no disponibles</p>
         {{/series}}
 
+        <div class="d-flex justify-content-center my-4">
+            <nav>
+
+                <ul class="pagination">
+                    <li class="page-item">
+                        {{#hasPrevious}}
+                            <a href="{{previousLink}}" class="page-link">
+                                &laquo; Previous
+                            </a>
+                        {{/hasPrevious}}
+                    </li>
+
+                    {{#pages}}
+                        <li class="page-item {{#current}}active{{/current}}">
+                            <a class="page-link" href="{{link}}">{{num}}</a>
+                        </li>
+                    {{/pages}}
+
+                    <li class="page-item">
+                        {{#hasNext}}
+                            <a href="{{nextLink}}" class="page-link" >Next &raquo;</a>
+                        {{/hasNext}}
+                    </li>
+                </ul>
+
+            </nav>
+        </div>
+
     </main>
-    
+
     {{>footer}}
 
 </body>
+
 </html>
