UPDATE styles, htmls and router

--- a/views/error.html
+++ b/views/error.html
@@ -20,7 +20,7 @@
             <p>{{message}}</p>
 
             {{#boolean_episode1}}
-            <a href="/main_detalle/{{serie._id}}/1" class="btn mt-3">Volver al episodio</a>
+            <a href="/update_episode/{{serie._id}}/{episode.numEpisode}" class="btn mt-3">Volver al episodio</a>
             {{/boolean_episode1}}
 
             {{#boolean_episode2}}
