--- a/views/saved_serie.html
+++ b/views/saved_serie.html
@@ -19,7 +19,7 @@
         <h1>Se ha realizado la operacion correctamente</h1>
         <p>{{message}}</p>
         {{#boolean_serie1}}
-        <a href="/" class="btn btn-primary mt-3">Volver al Catálogo</a>
+        <a href="/main_detalle/{{serie._id}}/1" class="btn btn-primary mt-3">Ir a la serie</a>
         {{/boolean_serie1}}
 
         {{#boolean_episode1}}
