--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_footer.css">
+    <link rel="stylesheet" href="/css/style_header.css">
     <!-- Bootstap css and js -->
     <link rel="shortcut icon" href="/images/logo/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +24,7 @@
             <form class="d-flex w-100 justify-content-center" role="search"  id="barra_busqueda" method="get" action="/">
                 <input class="form-control me-2" type="search" placeholder="Search" name="title"aria-label="Search" value="{{searchTitle}}"/>
                 <button class="btn btn-outline-danger" type="submit">Search</button>
-                <a class="btn btn-primary ms-2" href="new_elem" role="button">+</a>
+                <a class="btn btn-primary ms-2" href="/serie_action/0/false" role="button">+</a>
             </form>
         </div>
     </nav>
@@ -70,7 +72,7 @@
                     <li class="page-item">
                         {{#hasPrevious}}
                             <a href="{{previousLink}}" class="page-link">
-                                &laquo; Previous
+                                &laquo; 
                             </a>
                         {{/hasPrevious}}
                     </li>
@@ -83,7 +85,7 @@
 
                     <li class="page-item">
                         {{#hasNext}}
-                            <a href="{{nextLink}}" class="page-link" >Next &raquo;</a>
+                            <a href="{{nextLink}}" class="page-link" >&raquo;</a>
                         {{/hasNext}}
                     </li>
                 </ul>
