--- a/views/main_detalle_notfilm.html
+++ b/views/main_detalle_notfilm.html
@@ -74,7 +74,7 @@
                         <i class="bi bi-trash"></i>
                         <span class="btn-text">Borrar</span>
                     </a>
-                    <a href="/serie_update/{{serie._id}}" class="btn-interactive">
+                    <a href="/serie_action/{{serie._id}}/true" class="btn-interactive">
                         <i class="bi bi-pencil-fill"></i>
                         <span class="btn-text">Editar</span>
                     </a>
@@ -86,41 +86,8 @@
             </div> 
         </div>
         <div class="col-lg-4 col-12">
-            <div class="form-container">  
-                <h2 id="Form-title">Crear nuevo episodio</h2> 
-                <form action="/add_episode/{{serie._id}}" method="POST" enctype="multipart/form-data">
-                <div class="form-group">
-                    <label for="titleEp" class="form-label">Título del episodio</label>
-                    <input type="text" class="form-control" id="titleEp" name="titleEpisode" placeholder="Nombre del episodio"/>
-                </div>
-
-                <div class="form-group">
-                    <label for="synopsis" class="form-label">Sinopsis</label>
-                    <textarea class="form-control" id="synopsis" name="synopsisEpisode" placeholder="Breve descripción del episodio" rows="3"></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="NumEp" class="form-label">Número de episodio</label>
-                    <input type="number" class="form-control" id="NumEp" name="numEpisode" placeholder="Ejemplo: Episodio 1" />
-                </div>
-
-                <div class="form-group">
-                    <label for="Duration" class="form-label">Duración del episodio</label>
-                    <input type="number" class="form-control" id="Duration" name="timeEpisode" placeholder="Ejemplo: 24 minutos" />
-                </div>
-
-                <div class="form-group">
-                    <label for="Episode" class="form-label">Episodio</label>
-                    <input type="file" class="form-control" id="Episode" name="imageFilenamedetalle" />
-                </div>
-
-                <div class="form-group">
-                    <label for="Trailer" class="form-label">Trailer del episodio</label>
-                    <input type="file" class="form-control" id="Trailer" name="trailerEpisode" />
-                </div>
-
-                <div class="form-actions">
-                    <button type="submit" class="btn-action">Guardar</button>
+                <div>
+                    <a href="/update_episode/{{serie._id}}/0" class="btn-action">Crear episodio</a>
                     <a href="/update_episode/{{serie._id}}/{{episode.numEpisode}}" class="btn-action">Editar</a>
                     <a href="/borrarepisode/{{serie._id}}/{{episode.numEpisode}}" class="btn-action">Borrar</a>
                 </div>
