--- a/views/error.html
+++ b/views/error.html
@@ -32,7 +32,7 @@
             {{/boolean_serie1}}
 
             {{#boolean_serie2}}
-            <a href="/new_elem" class="btn mt-3">Volver al formulario</a>
+            <a href="/serie_action/0/false" class="btn mt-3">Volver al formulario</a>
             {{/boolean_serie2}}
         </div>
     </div>
