--- a/views/saved_serie.html
+++ b/views/saved_serie.html
@@ -16,7 +16,7 @@
     {{>header}}
 <div class="row">
     <div class="container my-5 text-center">
-        <h1>Se ha realizado la operacion correctamente</h1>
+        <h1>Se ha realizado la operación correctamente</h1>
         <p>{{message}}</p>
         {{#boolean_serie1}}
         <a href="/main_detalle/{{serie._id}}/1" class="btn btn-primary mt-3">Ir a la serie</a>
@@ -32,6 +32,6 @@
 
     </div>
 </div>
-    {{>footer}} 
+    {{>footer}}  
 </body>
 </html>
